# pong-hawk-backend

./: .dockerignore  .env.prod  .env.sample  .gitignore  Dockerfile  README.md  compose.yaml  nginx.conf  pyproject.toml  rabbitmq.conf
app/: models.py  pong_hawk.py  serializers.py  tasks.py  views.py
app/migrations/: 0001_initial.py  0002_game_strategy_alter_game_heatmap_and_more.py
app/utilities/: __init__.py
config/: celery.py  urls.py
config/settings/: base.py
